# likhadb

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  ROADMAP.md  compose.yml  dev.sh  prometheus.yml
.github/workflows/: ci.yml  docker.yml  lint.yml  python-ci.yml  python-lint.yml  python-publish.yml
alloy/: config.alloy
crates/likhadb-bench/: Cargo.toml
crates/likhadb-bench/benches/: search_bench.rs
crates/likhadb-bench/src/: lib.rs
crates/likhadb-core/: Cargo.toml
crates/likhadb-core/src/: binding.rs  distance.rs  lib.rs  metric.rs  types.rs
crates/likhadb-fts/: Cargo.toml
crates/likhadb-fts/src/: lib.rs  tantivy_index.rs
crates/likhadb-index/: Cargo.toml
crates/likhadb-index/src/: flat.rs  hnsw.rs  ivf.rs  lib.rs  snapshot.rs  traits.rs
crates/likhadb-lakehouse/: Cargo.toml
crates/likhadb-lakehouse/src/: error.rs  iceberg_flusher.rs  iceberg_io.rs  iceberg_recovery.rs  incremental_scan.rs  index_snapshot_io.rs  lib.rs  minio.rs  parquet_io.rs  staging_io.rs  wal_io.rs
crates/likhadb-lakehouse/tests/: iceberg_round_trip.rs  minio_round_trip.rs  round_trip.rs
crates/likhadb-persist/: Cargo.toml
crates/likhadb-persist/src/: error.rs  lib.rs
crates/likhadb-persist/src/wal/: entry.rs  frame.rs  mod.rs  recovery.rs
crates/likhadb-persist/tests/: round_trip.rs  wal_recovery.rs
crates/likhadb-query/: Cargo.toml
crates/likhadb-query/src/: config.rs  enrich.rs  error.rs  fusion.rs  lib.rs  pipeline.rs  rerank.rs  session.rs
crates/likhadb-server/: Cargo.toml  build.rs
crates/likhadb-server/proto/: likhadb.proto
crates/likhadb-server/src/: auth.rs  error.rs  lib.rs  main.rs  metrics.rs  pipeline_setup.rs  routes.rs  state.rs  types.rs
crates/likhadb-server/src/grpc/: error.rs  metrics.rs  mod.rs  service.rs
crates/likhadb-server/tests/: auth_integration.rs  hybrid_integration.rs  metrics_integration.rs  parquet_paths_integration.rs  query_limits_integration.rs
crates/likhadb-store/: Cargo.toml
crates/likhadb-store/src/: collection.rs  delta.rs  lib.rs  manager.rs  meta.rs  snapshot.rs
crates/likhadb-stress/: Cargo.toml
crates/likhadb-stress/src/: main.rs
docs/: ARCHITECTURE.md  quick-usages.md  rfc_datafusion_integration.md  stress-test.md
docs/adr/: design-review-iceberg-lakehouse.md
docs/agents/: codebase-map.md
docs/learning/: security-hardening-session.md
grafana/provisioning/dashboards/: dashboards.yml  likhadb-overview.json
grafana/provisioning/datasources/: datasources.yml
rfc/: rfc_datafusion_integration.md  rfc_incremental_index_maintenance.md  rfc_incremental_index_maintenance_phases.md  rfc_index_checkpoint_property_pointer.md  rfc_puffin_backed_index_snapshots.md  rfc_realtime_insert_vectordb.md  spike_iceberg_incremental_scan.md
sdk/python/: README.md  pyproject.toml
sdk/python/likhadb/: __init__.py  _http.py  client.py  collection.py  exceptions.py  models.py
sdk/python/tests/: test_client.py  test_models.py
