[workspace]
members = [
    "crates/likhadb-core",
    "crates/likhadb-index",
    "crates/likhadb-store",
    "crates/likhadb-persist",
    "crates/likhadb-server",
    "crates/likhadb-bench",
    "crates/likhadb-fts",
    "crates/likhadb-lakehouse",
    "crates/likhadb-stress",
    "crates/likhadb-query",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "1"
ordered-float = "4"
rand          = "0.8"
criterion     = { version = "0.5", features = ["html_reports"] }
simsimd       = "6"
rayon         = "1"
bincode       = "1"
tantivy       = "0.26"
