[workspace]
members = [
    "crates/likhadb-core",
    "crates/likhadb-index",
    "crates/likhadb-store",
    "crates/likhadb-persist",
    "crates/likhadb-server",
    "crates/likhadb-bench",
    "crates/likhadb-fts",
    "crates/likhadb-lakehouse",
    "crates/likhadb-stress",
    "crates/likhadb-query",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"

[workspace.dependencies]
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
thiserror     = "1"
ordered-float = "4"
rand          = "0.8"
criterion     = { version = "0.5", features = ["html_reports"] }
simsimd       = "6"
rayon         = "1"
bincode       = "1"
tantivy       = "0.26"
# Pin alloc-stdlib to 0.2.2: the 0.2.3 patch bumped its alloc-no-stdlib dep from
# ~2 to ^3, which conflicts with brotli v7's direct alloc-no-stdlib ~2 dep and
# causes E0277 on a fresh dependency resolution. Remove once brotli >= 8 is used.
alloc-stdlib  = "=0.2.2"
