[package]
name    = "likhadb-bench"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion     = { workspace = true }
rand          = { workspace = true }
likhadb-store = { path = "../likhadb-store" }
likhadb-core  = { path = "../likhadb-core" }

[[bench]]
name    = "search_bench"
harness = false
