[package]
name    = "likhadb-bench"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dev-dependencies]
criterion     = { workspace = true }
rand          = { workspace = true }
likhadb-store = { path = "../likhadb-store" }
likhadb-index = { path = "../likhadb-index" }
likhadb-core  = { path = "../likhadb-core" }
rayon         = { workspace = true }

[[bench]]
name    = "search_bench"
harness = false
