[package]
name    = "likhadb-lakehouse"
version = "0.1.0"
edition = "2021"

[features]
persist = ["dep:likhadb-persist"]
minio   = ["dep:object_store", "dep:bytes"]

[dependencies]
likhadb-core    = { path = "../likhadb-core" }
likhadb-store   = { path = "../likhadb-store" }
likhadb-persist = { path = "../likhadb-persist", optional = true, features = ["fts"] }
arrow           = "53"
parquet         = { version = "53", features = ["arrow"] }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
object_store    = { version = "0.11", features = ["aws"], optional = true }
bytes           = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt", "macros"] }
