[package]
name    = "likhadb-lakehouse"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
persist = ["dep:likhadb-persist"]
minio   = ["dep:object_store", "dep:bytes"]
iceberg = ["dep:iceberg", "dep:iceberg-catalog-rest", "dep:futures-util", "dep:tokio"]
iceberg-recovery = ["iceberg", "dep:bincode", "dep:bytes", "likhadb-store/persist", "dep:likhadb-persist", "dep:metrics", "dep:tracing", "likhadb-persist/iceberg-recovery"]

[dependencies]
likhadb-core    = { path = "../likhadb-core" }
likhadb-store   = { path = "../likhadb-store" }
likhadb-persist = { path = "../likhadb-persist", optional = true, features = ["fts"] }
arrow           = "53"
parquet         = { version = "53", features = ["arrow"] }
alloc-stdlib    = { workspace = true }
serde_json      = { workspace = true }
thiserror       = { workspace = true }
object_store    = { version = "0.11", features = ["aws"], optional = true }
bytes           = { version = "1", optional = true }
bincode         = { workspace = true, optional = true }
metrics         = { version = "0.23", optional = true }
tracing         = { version = "0.1", optional = true }
iceberg              = { version = "0.4", optional = true }
iceberg-catalog-rest = { version = "0.4", optional = true }
futures-util         = { version = "0.3", optional = true }
tokio                = { version = "1", features = ["rt", "time", "sync"], optional = true }

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt", "macros"] }
