[package]
name    = "likhadb-persist"
version = "0.1.0"
edition = "2021"

[dependencies]
likhadb-core  = { path = "../likhadb-core" }
likhadb-index = { path = "../likhadb-index", features = ["serde"] }
likhadb-store = { path = "../likhadb-store", features = ["persist"] }
bincode       = { workspace = true }
thiserror     = { workspace = true }
serde         = { workspace = true }

[dev-dependencies]
serde_json    = { workspace = true }
rand          = { workspace = true }
