[package]
name    = "likhadb-persist"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
fts              = ["likhadb-store/fts"]
iceberg-recovery = []

[dependencies]
likhadb-core  = { path = "../likhadb-core" }
likhadb-index = { path = "../likhadb-index", features = ["serde"] }
likhadb-store = { path = "../likhadb-store", features = ["persist"] }
bincode       = { workspace = true }
thiserror     = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
crc32fast     = "1"
metrics       = "0.23"
tracing       = "0.1"

[dev-dependencies]
rand          = { workspace = true }
