[package]
name    = "likhadb-server"
version = "0.1.0"
edition = "2021"

[dependencies]
likhadb-core    = { path = "../likhadb-core" }
likhadb-store   = { path = "../likhadb-store" }
likhadb-persist = { path = "../likhadb-persist" }
axum            = "0.7"
tokio           = { version = "1", features = ["full"] }
serde           = { workspace = true }
serde_json      = { workspace = true }

[dev-dependencies]
tempfile = "3"
