[package]
name    = "likhadb-server"
version = "0.1.0"
edition = "2021"

[features]
# Enables Tier Q: DataFusion enrichment, score fusion, and model-based reranking.
enriched-search = ["dep:likhadb-query"]

[dependencies]
likhadb-query = { path = "../likhadb-query", features = ["datafusion"], optional = true }
likhadb-core                 = { path = "../likhadb-core" }
likhadb-store                = { path = "../likhadb-store", features = ["fts"] }
likhadb-persist              = { path = "../likhadb-persist", features = ["fts"] }
likhadb-lakehouse            = { path = "../likhadb-lakehouse", features = ["persist"] }
axum                         = "0.7"
tokio                        = { version = "1", features = ["full"] }
serde                        = { workspace = true }
serde_json                   = { workspace = true }
tonic                        = "0.12"
prost                        = "0.13"
bytes                        = "1"
tokio-stream                 = "0.1"
metrics                      = "0.23"
metrics-exporter-prometheus  = "0.15"
tracing                      = "0.1"
tracing-subscriber           = { version = "0.3", features = ["env-filter", "json"] }
tower                        = { version = "0.5", features = ["util"] }
http                         = "1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
