[package]
name    = "likhadb-stress"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "likhadb-stress"
path = "src/main.rs"

[dependencies]
rand       = { workspace = true }
serde_json = { workspace = true }
tokio      = { version = "1", features = ["full"] }
reqwest    = { version = "0.12", features = ["json"] }
clap       = { version = "4",   features = ["derive"] }
