[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "likhadb"
version = "0.1.0"
description = "Python SDK for LikhaDB — the hybrid vector database for the data lakehouse"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["vector-database", "embedding", "search", "rag", "likhadb"]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.urls]
Repository = "https://github.com/PhVHoang/likhadb"

[tool.hatch.build.targets.wheel]
packages = ["likhadb"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
